fix: CORS fixed to accept OPTIONS requests and permit acess from localhost and the vercel domain